--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dinhthienphuc/artemis": "^0.1.9",
-    "@loadable/component": "^5.15.2",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.25.0",
+    "classnames": "^2.3.2",
+    "firebase": "^9.18.0",
+    "firebase-tools": "^11.25.2",
+    "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-hook-form": "^7.43.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "zustand": "^4.3.6"
   },
   "scripts": {
     "dev": "env-cmd -f .env.development react-scripts start",
@@ -64,19 +65,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
-    "@storybook/addon-actions": "^6.4.14",
-    "@storybook/addon-essentials": "^6.4.14",
-    "@storybook/addon-links": "^6.4.14",
-    "@storybook/builder-webpack5": "^6.4.14",
-    "@storybook/manager-webpack5": "^6.4.14",
-    "@storybook/node-logger": "^6.4.14",
-    "@storybook/preset-create-react-app": "^4.0.0",
-    "@storybook/react": "^6.4.14",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/loadable__component": "^5.13.4",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -87,13 +79,12 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.5.6",
     "husky": "^7.0.0",
-    "i18next": "^21.6.7",
+    "i18next": "^22.4.13",
     "lint-staged": "^13.0.3",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "react-i18next": "^11.15.3",
+    "react-i18next": "^12.2.0",
     "webpack": "5"
   },
   "lint-staged": {
