--- a/package.json
+++ b/package.json
@@ -18,6 +18,19 @@
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4",
     "zustand": "^4.3.6"
   },
   "scripts": {
@@ -33,7 +46,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "format": "npx pretty-quick --staged && npx lint-staged",
-    "postinstall": "npm run prepare"
+    "postinstall": "bit compile && bit link && bit install"
   },
   "eslintConfig": {
     "extends": [
