--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "format": "npx pretty-quick --staged && npx lint-staged"
+    "format": "npx pretty-quick --staged && npx lint-staged",
+    "postinstall": "bit install"
   },
   "eslintConfig": {
     "extends": [
