--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.5.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.4",
@@ -45,8 +46,7 @@
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "format": "npx pretty-quick --staged && npx lint-staged",
-    "postinstall": "bit install"
+    "format": "npx pretty-quick --staged && npx lint-staged"
   },
   "eslintConfig": {
     "extends": [
