--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "axios": "^0.25.0",
     "classnames": "^2.3.2",
     "firebase": "^9.18.0",
-    "firebase-tools": "^11.25.2",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,7 +45,8 @@
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "format": "npx pretty-quick --staged && npx lint-staged"
+    "format": "npx pretty-quick --staged && npx lint-staged",
+    "postinstall": "bit install"
   },
   "eslintConfig": {
     "extends": [
