--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "build:development": "env-cmd -f .env.development react-scripts build",
     "build:staging": "env-cmd -f .env.staging react-scripts build",
     "build:production": "env-cmd -f .env.production react-scripts build",
+    "deploy:firebase": "env-cmd -f .env.production react-scripts build && firebase login && firebase deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
