--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,11 @@
 .DS_Store
 .env.local
 .env.development.local
+.env.staging
+.env.development
 .env.test.local
 .env.production.local
+.env.production
 *.pem
 /.firebase
 
