--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kengan-fighters",
-  "version": "0.1.0",
+  "name": "react-base",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "axios": "^0.25.0",
