--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Kengan Fighters",
-  "name": "Kengan Fighters",
+  "short_name": "React Base",
+  "name": "React Base",
   "icons": [
     {
       "src": "favicon.ico",
