--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
