--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-base",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "yarn@3.6.3",
   "dependencies": {
     "axios": "^0.25.0",
     "classnames": "^2.3.2",
