--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
   "name": "react-base",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "env-cmd -f .env.development react-scripts start",
+    "dev:staging": "env-cmd -f .env.staging react-scripts start",
+    "dev:production": "env-cmd -f .env.production react-scripts start",
+    "build:development": "env-cmd -f .env.development react-scripts build",
+    "build:staging": "env-cmd -f .env.staging react-scripts build",
+    "build": "env-cmd -f .env.production react-scripts build",
+    "test": "react-scripts test --watchAll=false --no-cache",
+    "test:coverage": "react-scripts test --coverage --watchAll=false --no-cache",
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "format": "npx pretty-quick --staged && npx lint-staged",
+    "postinstall": "bit install"
+  },
   "dependencies": {
     "axios": "^0.25.0",
     "classnames": "^2.3.2",
-    "firebase": "^9.18.0",
     "i18next": "^23.4.4",
     "next": "^13.2.4",
     "react": "^18.2.0",
@@ -33,69 +47,6 @@
     "workbox-streams": "^6.5.4",
     "zustand": "^4.3.6"
   },
-  "scripts": {
-    "dev": "env-cmd -f .env.development react-scripts start",
-    "dev:staging": "env-cmd -f .env.staging react-scripts start",
-    "dev:production": "env-cmd -f .env.production react-scripts start",
-    "build:development": "env-cmd -f .env.development react-scripts build",
-    "build:staging": "env-cmd -f .env.staging react-scripts build",
-    "build:production": "env-cmd -f .env.production react-scripts build",
-    "deploy:firebase": "env-cmd -f .env.production react-scripts build && firebase login && firebase deploy",
-    "test": "react-scripts test --watchAll=false --no-cache",
-    "test:coverage": "react-scripts test --coverage --watchAll=false --no-cache",
-    "eject": "react-scripts eject",
-    "prepare": "husky install",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "format": "npx pretty-quick --staged && npx lint-staged",
-    "postinstall": "bit install"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!**/node_modules/**",
-      "!**/vendor/**",
-      "!src/**/*.types.{ts,tsx}",
-      "!src/**/types.{ts,tsx}",
-      "!src/**/definations/*",
-      "!src/**/style.{ts,tsx}",
-      "!src/app.{ts,tsx}",
-      "!src/service-worker.ts",
-      "!src/serviceWorkerRegistration.ts",
-      "!src/react-app-env.d.ts",
-      "!src/**/*/index.ts",
-      "!src/index.tsx",
-      "!src/api/request.ts"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@testing-library/jest-dom": "^6.0.0",
@@ -120,9 +71,5 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "webpack": "5"
-  },
-  "lint-staged": {
-    "*.ts*": "eslint --fix --max-warnings 0",
-    "*.js*": "eslint --fix"
   }
 }
