--- a/package.json
+++ b/package.json
@@ -71,5 +71,25 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
     "webpack": "5"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!src/**/*.types.{ts,tsx}",
+      "!src/**/types.{ts,tsx}",
+      "!src/**/definations/*",
+      "!src/**/style.{ts,tsx}",
+      "!src/**/constants/**",
+      "!src/**/constants.{ts,tsx}",
+      "!src/app.{ts,tsx}",
+      "!src/service-worker.ts",
+      "!src/serviceWorkerRegistration.ts",
+      "!src/react-app-env.d.ts",
+      "!src/**/*/index.ts",
+      "!src/index.tsx",
+      "!src/api/request.ts"
+    ]
   }
 }
