--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "test": "react-scripts test --watchAll=false --no-cache",
     "test:coverage": "react-scripts test --coverage --watchAll=false --no-cache",
     "prepare": "husky install",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "format": "npx pretty-quick --staged && npx lint-staged",
-    "postinstall": "bit install"
+    "bit-start": "bit start",
+    "postinstall": "bit import && bit compile && bit link"
   },
   "dependencies": {
     "axios": "^0.25.0",
@@ -51,6 +50,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
+    "@babel/runtime": "^7.23.6",
+    "@types/jest": "^29.5.11",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
