--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "classnames": "^2.3.2",
+    "clsx": "^2.1.0",
     "csstype": "^3.1.2",
     "firebase": "^10.4.0",
     "i18next": "^23.4.4",
