--- a/.gitignore
+++ b/.gitignore
@@ -13,15 +13,17 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.staging
-.env.development
-.env.test.local
-.env.production.local
-.env.production
 *.pem
 /.firebase
+
+# env
+# .env.local
+# .env.development.local
+# .env.staging
+# .env.development
+# .env.test.local
+# .env.production.local
+# .env.production
 
 npm-debug.log*
 
