fix: updating Select ...

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test --watchAll=false --no-cache",
     "test:coverage": "react-scripts test --coverage --watchAll=false --no-cache",
-    "prepare": "husky install && rackun install",
+    "prepare": "husky install",
     "format": "npx pretty-quick --staged && npx lint-staged",
     "bit-start": "bit start -p 6868",
     "postinstall": "bit import && bit compile && bit link"
