--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
     "prepare": "husky",
     "format": "npx pretty-quick --staged && npx lint-staged",
     "dev": "pnpm --filter ./apps/$0 --stream --parallel dev",
-    "rmnpm": "pnpm --filter \"./packages/**/**\"  --filter \"./apps/**\" -r exec rimraf ./node_modules && rimraf ./pnpm-lock.yaml"
+    "rmnpm": "rimraf ./node_modules && rimraf ./pnpm-lock.yaml && pnpm --filter \"./packages/**/**\"  --filter \"./apps/**\" -r exec rimraf ./node_modules && rimraf ./pnpm-lock.yaml"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^20.12.10",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
