--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "changeset": "changeset",
     "bump": "changeset version",
     "format": "npx pretty-quick --staged && npx lint-staged",
+    "generate": "ts-node ./scripts/generate-package.ts",
+    "devee": "ts-node ./scripts/run-pnpm-command.ts",
     "dev": "pnpm --filter ./apps/$0 --stream --parallel dev",
     "dev:storybook": "pnpm --filter base-ui-storybook storybook",
     "start": "pnpm --filter ./apps/$0 --stream --parallel start",
@@ -23,8 +25,10 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-json": "^3.1.0",
@@ -39,6 +43,10 @@
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "styled-components": "^6.1.10",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "vite-plugin-dts": "^3.9.1",
+    "yargs": "^17.7.2"
   }
 }
