feat(project): add some first components and bump version to be ready to publish

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 registry=https://registry.npmjs.com/
-@phantomthief-react:registry=https://test/npm/registry/
+@phantomthief-react:registry=https://registry.npmjs.com/
