--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "bump": "changeset version",
     "format": "npx pretty-quick --staged && npx lint-staged",
     "generate": "ts-node ./scripts/generate-package.ts",
-    "devee": "ts-node ./scripts/run-pnpm-command.ts",
-    "dev": "pnpm --filter ./apps/$0 --stream --parallel dev",
-    "dev:storybook": "pnpm --filter base-ui-storybook storybook",
-    "start": "pnpm --filter ./apps/$0 --stream --parallel start",
-    "build": "pnpm --filter \"./packages/**/**\" -r build",
-    "publish": "pnpm --filter \"./packages/**/**\" -r publish --access public --no-git-checks",
+    "dev": "ts-node ./scripts/run-pnpm-command.ts --stream --parallel dev",
+    "dev:all": "pnpm --filter \"./apps/**\" --stream --parallel dev",
+    "dev:storybook": "pnpm --filter --filter \"./apps/storybook\" storybook",
+    "start": "ts-node ./scripts/run-pnpm-command.ts --stream --parallel start",
+    "start:all": "pnpm --filter \"./apps/**\" --stream --parallel start",
+    "build": "ts-node ./scripts/run-pnpm-command.ts -r build",
+    "build:all": "pnpm --filter \"./packages/**/**\" -r build",
+    "publish": "ts-node ./scripts/run-pnpm-command.ts -r publish --access public --no-git-checks",
+    "publish:all": "pnpm --filter \"./packages/**/**\" -r publish --access public --no-git-checks",
     "rmnpm": "pnpm --filter \"./packages/**/**\" --filter \"./apps/**\" -r exec rimraf ./node_modules && rm -rf ./node_modules && rm -rf ./pnpm-lock.yaml"
   },
   "keywords": [],
@@ -26,14 +29,15 @@
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "clsx": "^2.1.1",
+    "csstype": "^3.1.3",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "globals": "^15.2.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
