--- a/packages/components/flex-box/package.json
+++ b/packages/components/flex-box/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@phantomthief-react/utils.constants",
+  "name": "@phantomthief-react/components.flex-box",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.cjs",
@@ -24,6 +24,15 @@
     "dev": "vite build --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --max-warnings 0"
+  },
+  "peerDependencies": {
+    "typescript": "*",
+    "react": "*",
+    "styled-components": "*",
+    "csstype": "*",
+    "clsx": "*",
+    "@phantomthief-react/utils.definations": "workspace:*",
+    "@phantomthief-react/utils.helpers": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
