--- a/packages/utils/definations/package.json
+++ b/packages/utils/definations/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@phantomthief-react-utils/definations",
+  "name": "@phantomthief-react/utils.definations",
   "version": "0.0.1",
   "type": "module",
   "main": "dist/index.cjs",
@@ -27,7 +27,8 @@
   },
   "peerDependencies": {
     "typescript": "*",
-    "react": "*"
+    "react": "*",
+    "@phantomthief-react/utils.constants": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
