--- a/package.json
+++ b/package.json
@@ -8,22 +8,32 @@
     "generate": "ts-node ./scripts/generate-package.ts",
     "dev": "ts-node ./scripts/run-pnpm-command.ts --stream --parallel dev",
     "dev:all": "pnpm --filter \"./apps/**\" --stream --parallel dev",
-    "dev:storybook": "pnpm --filter --filter \"./apps/storybook\" storybook",
     "start": "ts-node ./scripts/run-pnpm-command.ts --stream --parallel start",
     "start:all": "pnpm --filter \"./apps/**\" --stream --parallel start",
     "build": "ts-node ./scripts/run-pnpm-command.ts -r build",
     "build:all": "pnpm --filter \"./packages/**/**\" -r build",
     "publish": "ts-node ./scripts/run-pnpm-command.ts -r publish --access public --no-git-checks",
     "publish:all": "pnpm --filter \"./packages/**/**\" -r publish --access public --no-git-checks",
-    "rmnpm": "pnpm --filter \"./packages/**/**\" --filter \"./apps/**\" -r exec rimraf ./node_modules && rm -rf ./node_modules && rm -rf ./pnpm-lock.yaml"
+    "rmnpm": "pnpm --filter \"./packages/**/**\" --filter \"./apps/**\" -r exec rimraf ./node_modules && rm -rf ./node_modules && rm -rf ./pnpm-lock.yaml",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@chromatic-com/storybook": "1.3.5",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/addon-onboarding": "^8.0.10",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/react-vite": "^8.0.10",
+    "@storybook/test": "^8.0.10",
     "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
@@ -37,6 +47,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.2.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
@@ -46,11 +57,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
+    "storybook": "^8.0.10",
     "styled-components": "^6.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.9.1",
     "yargs": "^17.7.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
