--- a/package.json
+++ b/package.json
@@ -50,14 +50,17 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-storybook": "^0.8.0",
+    "firebase": "^10.11.1",
     "globals": "^15.2.0",
     "husky": "^9.0.11",
+    "i18next": "^23.11.4",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "prettier-plugin-sort-imports": "^1.8.5",
     "pretty-quick": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "rimraf": "^5.0.5",
     "storybook": "^8.0.10",
     "styled-components": "^6.1.10",
