--- a/.github/workflows/release-packages.yml
+++ b/.github/workflows/release-packages.yml
@@ -16,14 +16,18 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18"
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Install pnpm
+        run: npm i -g pnpm
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm ia
 
-      - name: Bump versions
-        run: pnpm bump
+      - name: Build packages
+        run: pnpm build:all
 
       - name: Publish packages
         run: pnpm publish:all
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
