--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 registry=https://registry.npmjs.com/
 @phantomthief-react:registry=https://registry.npmjs.com/
+//registry.npmjs.com/:_authToken=${NPM_AUTH_TOKEN}
