--- a/package.json
+++ b/package.json
@@ -41,43 +41,42 @@
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@types/yargs": "^17.0.32",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "clsx": "^2.1.1",
     "csstype": "^3.1.3",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-storybook": "^0.6.15",
     "firebase": "^10.11.1",
-    "globals": "^15.2.0",
     "husky": "^9.0.11",
     "i18next": "^23.11.4",
     "lint-staged": "^15.2.2",
-    "pnpm": "^9.1.2",
     "prettier": "^3.2.5",
     "prettier-plugin-sort-imports": "^1.8.5",
     "pretty-quick": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-hook-form": "*",
+    "react-hook-form": "^7.51.5",
     "react-i18next": "^14.1.1",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "storybook": "^8.0.10",
     "styled-components": "^6.1.10",
     "ts-node": "^10.9.2",
+    "tsc-files": "^1.1.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.9.1",
     "yargs": "^17.7.2"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
