--- a/packages/utils/definations/package.json
+++ b/packages/utils/definations/package.json
@@ -28,6 +28,7 @@
   "peerDependencies": {
     "typescript": "*",
     "react": "*",
+    "react-hook-form": "*",
     "@phantomthief-react/utils.constants": "workspace:*"
   },
   "author": "@DinhThienPhuc",
