--- a/packages/components/switch/package.json
+++ b/packages/components/switch/package.json
@@ -30,9 +30,8 @@
     "react": "*",
     "styled-components": "*",
     "clsx": "*",
-    "@phantomthief-react/utils.definations": "workspace:*",
     "@phantomthief-react/components.typography": "workspace:*",
-    "@phantomthief-react/utils.constants": "workspace:*"
+    "@phantomthief-react/utils": "workspace:*"
   },
   "devDependencies": {
     "react-hook-form": "*"
