--- a/packages/hooks/block/package.json
+++ b/packages/hooks/block/package.json
@@ -28,7 +28,7 @@
   "peerDependencies": {
     "typescript": "*",
     "react": "*",
-    "@phantomthief-react/utils.definations": "workspace:*"
+    "@phantomthief-react/utils": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
