--- a/packages/components/flex-box/package.json
+++ b/packages/components/flex-box/package.json
@@ -31,8 +31,7 @@
     "styled-components": "*",
     "csstype": "*",
     "clsx": "*",
-    "@phantomthief-react/utils.definations": "workspace:*",
-    "@phantomthief-react/utils.helpers": "workspace:*"
+    "@phantomthief-react/utils": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
