--- a/packages/modules/authenticator/package.json
+++ b/packages/modules/authenticator/package.json
@@ -29,7 +29,7 @@
     "typescript": "*",
     "react": "*",
     "react-router-dom": "*",
-    "@phantomthief-react/hooks.block": "workspace:*"
+    "@phantomthief-react/hooks": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
