--- a/packages/components/switch/package.json
+++ b/packages/components/switch/package.json
@@ -31,7 +31,8 @@
     "styled-components": "*",
     "clsx": "*",
     "@phantomthief-react/components.typography": "workspace:*",
-    "@phantomthief-react/utils": "workspace:*"
+    "@phantomthief-react/utils": "workspace:*",
+    "@phantomthief-react/hooks": "workspace:*"
   },
   "devDependencies": {
     "react-hook-form": "*"
