--- a/packages/components/pre-adorment/package.json
+++ b/packages/components/pre-adorment/package.json
@@ -30,8 +30,7 @@
     "react": "*",
     "styled-components": "*",
     "clsx": "*",
-    "@phantomthief-react/utils": "workspace:*",
-    "@phantomthief-react/components.typography": "workspace:*"
+    "@phantomthief-react/utils": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
