feat: add something

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "prepare": "husky install",
     "changeset": "changeset",
     "bump": "changeset version",
+    "do": "ts-node ./scripts/run-pnpm-command.ts",
     "is": "ts-node ./scripts/run-pnpm-command.ts -r i",
     "format": "npx pretty-quick --staged && npx lint-staged",
     "generate": "ts-node ./scripts/generate-package.ts",
