--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
       "error",
       { "argsIgnorePattern": "^_" }
     ],
-    "@typescript-eslint/no-non-null-assertion": "off"
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
