--- a/packages/hooks/main/package.json
+++ b/packages/hooks/main/package.json
@@ -25,9 +25,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --max-warnings 0"
   },
-  "peerDependencies": {
-    "typescript": "*",
-    "react": "*",
+  "dependencies": {
     "@phantomthief-react/hooks.block": "workspace:*",
     "@phantomthief-react/hooks.event-listener": "workspace:*",
     "@phantomthief-react/hooks.focus-with-callback": "workspace:*",
@@ -35,6 +33,10 @@
     "@phantomthief-react/hooks.not-click-on-elements": "workspace:*",
     "@phantomthief-react/hooks.on-mounted": "workspace:*",
     "@phantomthief-react/hooks.form-element": "workspace:*"
+  },
+  "peerDependencies": {
+    "typescript": "*",
+    "react": "*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
