--- a/packages/services/main/package.json
+++ b/packages/services/main/package.json
@@ -25,12 +25,14 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --max-warnings 0"
   },
-  "peerDependencies": {
-    "typescript": "*",
-    "react": "*",
+  "dependencies": {
     "@phantomthief-react/services.firebase": "workspace:*",
     "@phantomthief-react/services.i18n": "workspace:*",
     "@phantomthief-react/services.styled-theme": "workspace:*"
+  },
+  "peerDependencies": {
+    "typescript": "*",
+    "react": "*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
