--- a/packages/components/main/package.json
+++ b/packages/components/main/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@phantomthief-react/components.button": "workspace:*",
     "@phantomthief-react/components.flex-box": "workspace:*",
+    "@phantomthief-react/components.hamburger-menu": "workspace:*",
     "@phantomthief-react/components.loading-ellipsis": "workspace:*",
     "@phantomthief-react/components.loading-ripple": "workspace:*",
     "@phantomthief-react/components.navbar": "workspace:*",
