feat: update components

--- a/packages/components/hamburger-menu/package.json
+++ b/packages/components/hamburger-menu/package.json
@@ -28,6 +28,7 @@
   "peerDependencies": {
     "typescript": "*",
     "react": "*",
+    "styled-components": "*",
     "clsx": "*",
     "@phantomthief-react/utils": "workspace:*"
   },
