--- a/packages/modules/responsive-topnav/package.json
+++ b/packages/modules/responsive-topnav/package.json
@@ -28,14 +28,12 @@
   "peerDependencies": {
     "react": "*",
     "typescript": "*",
+    "styled-components": "*",
     "@phantomthief-react/utils": "workspace:*",
     "@phantomthief-react/components": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
   "description": "",
-  "sideEffects": false,
-  "dependencies": {
-    ".responsive-topnav": "link:.responsive-topnav"
-  }
+  "sideEffects": false
 }
