feat: add modules.responsive-topnav

--- a/packages/modules/responsive-topnav/package.json
+++ b/packages/modules/responsive-topnav/package.json
@@ -29,7 +29,9 @@
     "react": "*",
     "typescript": "*",
     "styled-components": "*",
+    "clsx": "*",
     "@phantomthief-react/utils": "workspace:*",
+    "@phantomthief-react/hooks": "workspace:*",
     "@phantomthief-react/components": "workspace:*"
   },
   "author": "@DinhThienPhuc",
