feat: add @phantomthief-react/hooks dependency and useSyncStateWithProps hook

--- a/packages/components/hamburger-menu/package.json
+++ b/packages/components/hamburger-menu/package.json
@@ -30,7 +30,8 @@
     "react": "*",
     "styled-components": "*",
     "clsx": "*",
-    "@phantomthief-react/utils": "workspace:*"
+    "@phantomthief-react/utils": "workspace:*",
+    "@phantomthief-react/hooks": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
