--- a/.github/workflows/release-packages.yml
+++ b/.github/workflows/release-packages.yml
@@ -1,15 +1,15 @@
 name: Release Packages
 
 on:
-  create:
+  push:
     branches:
       - "release/packages/*"
 
 jobs:
-  release:
+  release-packages:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout 🛎️
         uses: actions/checkout@v2
 
       - name: Setup Node.js
