--- a/.github/workflows/release-portfolio.yml
+++ b/.github/workflows/release-portfolio.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm i -g pnpm
 
       - name: Install dependencies for portfolio
-        run: pnpm --filter my-portfolio -r i --frozen-lockfile
+        run: pnpm --filter my-portfolio -r i
 
       - name: Build portfolio
         run: pnpm --filter my-portfolio -r build
