--- a/apps/my-portfolio/package.json
+++ b/apps/my-portfolio/package.json
@@ -13,11 +13,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.10",
-    "@phantomthief-react/components": "workspace:*",
-    "@phantomthief-react/hooks": "workspace:*",
-    "@phantomthief-react/modules": "workspace:*",
-    "@phantomthief-react/utils": "workspace:*",
-    "@phantomthief-react/services": "workspace:*"
+    "@phantomthief-react/components": "^0.0.4",
+    "@phantomthief-react/hooks": "^0.0.4",
+    "@phantomthief-react/modules": "^0.0.4",
+    "@phantomthief-react/utils": "^0.0.4",
+    "@phantomthief-react/services": "^0.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
