--- a/.github/workflows/release-portfolio.yml
+++ b/.github/workflows/release-portfolio.yml
@@ -17,14 +17,11 @@ jobs:
           node-version: "18"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Install global packages
-        run: npm i -g pnpm
-
-      - name: Install dependencies for portfolio
-        run: pnpm --filter my-portfolio -r i
-
-      - name: Build portfolio
-        run: pnpm --filter my-portfolio -r build
+      - name: Build project 👷
+        run: |
+          cd apps/my-portfolio
+          npm i
+          npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
