--- a/apps/my-portfolio/package.json
+++ b/apps/my-portfolio/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phantomthief-react/components": "workspace:*",
+    "@phantomthief-react/hooks": "workspace:*",
+    "@phantomthief-react/modules": "workspace:*",
+    "@phantomthief-react/services": "workspace:*",
+    "@phantomthief-react/utils": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^6.23.1",
-    "styled-components": "^6.1.10",
-    "@phantomthief-react/components": "^0.0.4",
-    "@phantomthief-react/hooks": "^0.0.4",
-    "@phantomthief-react/modules": "^0.0.4",
-    "@phantomthief-react/utils": "^0.0.4",
-    "@phantomthief-react/services": "^0.0.4"
+    "styled-components": "^6.1.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
