chore: add gap property for FlexBox component and update Accodrdion module

--- a/packages/modules/accordion/package.json
+++ b/packages/modules/accordion/package.json
@@ -31,10 +31,9 @@
     "styled-components": "*",
     "clsx": "*",
     "zustand": "*",
+    "react-feather": "*",
     "@phantomthief-react/hooks": "workspace:*",
-    "@phantomthief-react/utils": "workspace:*"
-  },
-  "devDependencies": {
+    "@phantomthief-react/utils": "workspace:*",
     "@phantomthief-react/components": "workspace:*"
   },
   "author": "@DinhThienPhuc",
