--- a/packages/components/radio-group/package.json
+++ b/packages/components/radio-group/package.json
@@ -30,7 +30,7 @@
     "react": "*",
     "styled-components": "*",
     "clsx": "*",
-    "@phantomthief-react/components.typography": "workspace:*",
+    "@phantomthief-react/components.flex-box": "workspace:*",
     "@phantomthief-react/hooks": "workspace:*",
     "@phantomthief-react/utils": "workspace:*"
   },
