--- a/.github/workflows/release-portfolio.yml
+++ b/.github/workflows/release-portfolio.yml
@@ -23,6 +23,9 @@ jobs:
           npm i
           npm run build
 
+      - name: Bypass jekyll
+        run: touch "apps/my-portfolio/dist/.nojekyll"
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
