feat: add ahooks package for React components

--- a/packages/hooks/media-query/package.json
+++ b/packages/hooks/media-query/package.json
@@ -27,7 +27,8 @@
   },
   "peerDependencies": {
     "typescript": "*",
-    "react": "*"
+    "react": "*",
+    "@phantomthief-react/hooks.isomorphic-layout-effect": "workspace:*"
   },
   "author": "@DinhThienPhuc",
   "license": "ISC",
