--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "ahooks": "^3.8.0",
     "babel-plugin-styled-components": "^2.1.4",
     "clsx": "^2.1.1",
     "csstype": "^3.1.3",
